fix IE scrollbar

--- a/src/styles/laji.css
+++ b/src/styles/laji.css
@@ -1,6 +1,7 @@
 html {
   position: relative;
   height: 100%;
+  -ms-overflow-style: scrollbar;
 }
 
 body {
